syntax = "proto3";
package api;

import "api/common.proto";

message ShowContestRequest {
    int64 contest_id = 1; 
}

message Contest {
    int64 contest_id = 1;
    string title = 2;
    string description = 3;
    bool is_virtual = 4;
    string contest_type = 5;
    string start_time = 6;
    string end_time = 7;
    string lock_board_time = 8;
    string access = 9;
    string status = 10;
}

message ShowContestResponse {
    Contest contest = 1;
    Error error = 2;
}
