syntax = "proto3";

package messages;

message SubmitLanguage {
    string suffix = 1;
    string compiler = 2;
    string lang = 3;
    string option_value = 4;
}

message TestCase {
    int64 case_id = 1;
    bytes input_hash = 2;
    bytes output_hash = 3;
    bytes input = 4;
    bytes output = 5;
}

message SpjCode {
    int64 local_pid = 1;
    bytes hash = 2;
    string code = 3;
    // SubmitLanguage
}

message SubmitMQ {
    int64 run_id = 1;
    string oj_name = 2;
    string oj_pid = 3;
    string code = 4;
    int32 time_limit = 5;
    int32 memory_limit = 6;
    bool is_local = 7;
    bool is_spj = 8;
    string spj_code = 9;
    string submit_time = 10;
    SubmitLanguage language = 11;
    repeated TestCase testcases = 12;
}
